--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
   <link href="./output.css" rel="stylesheet">
 </head>
 
+<!-- <body class="bg-gray-300"> -->
+
 <body>
   <app-root></app-root>
 </body>
